# rust-html-builder

./: htmlBuilder.html  index.html  package.json  vite.config.ts
rust/: Cargo.toml  build
rust/src/: builder.rs  lib.rs
